--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -137,21 +137,21 @@
               </div>
             </li>
             <li class="list-group-item list-group-item-light">Random active authors</li>
-            {% for user in random_users %}
+            <!-- {% for user in random_users %} -->
             <li class="list-group-item list-group-item-light">
               <article class="media content-section mb-1">
-                <img class="rounded-circle article-img" src="{{ user.author.profile.image.url }}">
+                <!-- <img class="rounded-circle article-img" src="{{ user.author.profile.image.url }}"> -->
                 <div class="media-body">
                   <div class="article-metadata">
-                    <p class="mb-2">{{ user.author }}</p>
+                    <!-- <p class="mb-2">{{ user.author }}</p> -->
                     <div>
-                      <small class="text-muted"><a href="{{ user.author_link }}">Author's link</a></small>
+                      <!-- <small class="text-muted"><a href="{{ user.author_link }}">Author's link</a></small> -->
                     </div>
                   </div>
                 </div>
               </article>
             </li>
-            {% endfor %}
+            <!-- {% endfor %} -->
           </ul>
           </p>
         </div>
