--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -15,7 +15,7 @@
     {% csrf_token %}
     <fieldset class="form-group">
       <legend class="border-bottom mb-4">
-        Profile Info
+        Profile Info (Only star users can change profile picture, please contact with me)
       </legend>
       {{ u_form|crispy }}
       {{ p_form|crispy }}
